--- a/index.html
+++ b/index.html
@@ -6,14 +6,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="app.css">
-  <title>Calendar Test</title>
+  <title></title>
 </head>
 
 <body>
-  <div id="app">
+  <div id="app" v-cloak>
+    Start Date:
+    <input v-model="startDate" type="date">
+    <br> Number of days:
+    <input v-model.number="numberOfDays" type="number" min="1">
+    <br> Country Code:
+    <input v-model="countryCode" type="text">
 
+    <div class="daysoftheweek" v-for="dayName in dayNames">
+      <div class="day">{{ dayName }}</div>
+    </div>
+
+    <div class="month" v-for="month in months">
+
+      <div class="title">
+        {{ month }}
+      </div>
+
+      <div class="days" v-for="(day, index) in filterDays(month)">
+
+        <div class="day" :class="{weekday: !isWeekend(day), weekend: isWeekend(day)}">
+          {{ day.number }}
+        </div>
+
+      </div>
+
+    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.22.2/moment.min.js"></script>
   <script src="app.js"></script>
 </body>
 
